[package]
name = "card-api-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.2", features = ["runtime", "with-chrono-0_4"]}
warp = "0.3.1"
mobc-postgres = "0.7.0"
jwt = "0.15.0"
chrono = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2="0.9"
base64="0.13"
hmac="0.11"